Bug 128900 - Non-gtk3: can't edit initial macro with empty user profile
Summary: Non-gtk3: can't edit initial macro with empty user profile
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bisected, regression
: 129022 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-19 14:25 UTC by Miklos Vajna
Modified: 2019-11-26 09:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2019-11-19 14:25:34 UTC
Steps to reproduce:

1) Start with an empty user profile or --safe-mode

2) Press alt-f11 to open the basic macro organizer

3) Try to press the Edit button

Expected result: can click on the button

Actual result: button is disabled

Doesn't happen with gtk3, happens with e.g. the "gen" backend on Linux (SAL_USE_VCLPLUGIN=gen).

Happens with core.git c2097477e3a43d75c170a6f7a5daf5dcb2169329, not with older master. I'll try to bisect.
Comment 1 Miklos Vajna 2019-11-19 14:29:52 UTC
 ae2a8d72fe53ae1e2d43ec29373905ec7f557e32 is the first bad commit
commit ae2a8d72fe53ae1e2d43ec29373905ec7f557e32
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Oct 24 17:23:07 2019 +0200

    source dbe5388c92d988c106cb8def839d031008a0d642
    
    source dbe5388c92d988c106cb8def839d031008a0d642

:040000 040000 b9cf96c3661e8a62810e34ca5fadb683c0eaca0f 22ca1d4e926bd3e66705ca0f162bcd93f153663a M      instdir

Bisected with: bibisect-linux64-6.4

Adding Cc: to Caolán McNamara -- could you please take a look? I'm not sure if this should be fixed on the vcl side or on the basic side. Thanks.
Comment 2 Commit Notification 2019-11-20 12:42:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eee6ef53ebc5756a974e985925550dcd990876ca

Resolves: tdf#128900 can't edit initial macro with empty user profile

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-11-20 14:06:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/7ea47791488bfb3c4abe66f2c6035a2a5ee12871

Resolves: tdf#128900 can't edit initial macro with empty user profile

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2019-11-21 08:40:27 UTC
Thanks a lot, works here as well. :-)
Comment 5 Xisco Faulí 2019-11-21 11:44:14 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 60b1a93a990a9978a30dee929526faf8db629a7f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 6 Caolán McNamara 2019-11-26 09:34:13 UTC
*** Bug 129022 has been marked as a duplicate of this bug. ***