Resolves: tdf#128900 can't edit initial macro with empty user profile

Change-Id: I5e28a4253b755fc3f5ed7c02c99c2611513e5bd8
Reviewed-on: https://gerrit.libreoffice.org/83282
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>